--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     Server --> Client: Response
 @enduml</textarea></div>
                 <div class="col d-flex flex-row justify-content-center align-items-end" style="padding: 20px;margin: 0 12px;margin-bottom: 24px;border-radius: 20px;background: var(--bs-dark);box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;">
-                    <div class="d-flex justify-content-center align-items-center" style="padding: 10px;width: 100%;height: 250px;background: white;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;border-radius: 20px;"><img id="img-uml" class="none" style="width: 100%;object-fit: contain;object-position: center;height: 230px;" src="example.png">
+                    <div class="d-flex justify-content-center align-items-center" style="padding: 10px;width: 100%;height: 300px;background: white;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;border-radius: 20px;"><img id="img-uml" class="none" style="width: 100%;object-fit: contain;object-position: center;height: 100%;" src="assets/img/example.png">
                         <div class="d-flex justify-content-center align-items-center" style="position: absolute;z-index: 7777;width: 25%;height: 25%;"><div id="loader-img-uml">
     <svg class="circle-outer" viewBox="0 0 86 86">
         <circle class="back" cx="43" cy="43" r="40"></circle>
