--- a/index.html
+++ b/index.html
@@ -47,37 +47,58 @@
 </head>
 
 <body>
-    <div class="d-flex justify-content-end align-items-start" style="width: 100%;height: 0;"><a class="menu" href="#" style="margin: 20px;padding: 10px;" data-bs-target="#offcanvas-menu" data-bs-toggle="offcanvas"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="zoom" style="color: var(--bs-body-color);font-size: 24px;">
-
+    <div class="d-flex justify-content-end align-items-start" style="width: 100%;height: 0;">
+        <a class="menu" href="#" style="margin: 20px;padding: 10px;" data-bs-target="#offcanvas-menu" data-bs-toggle="offcanvas">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="zoom" style="color: var(--bs-body-color);font-size: 24px;">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M3 7C3 6.44772 3.44772 6 4 6H16C16.5523 6 17 6.44772 17 7C17 7.55228 16.5523 8 16 8H4C3.44772 8 3 7.55228 3 7Z" fill="currentColor"></path>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M3 13C3 12.4477 3.44772 12 4 12H16C16.5523 12 17 12.4477 17 13C17 13.5523 16.5523 14 16 14H4C3.44772 14 3 13.5523 3 13Z" fill="currentColor"></path>
-            </svg></a></div><!-- Start: Sidebar With Menu -->
+            </svg>
+        </a>
+    </div><!-- Start: Sidebar With Menu -->
     <div class="offcanvas offcanvas-start bg-body" tabindex="-1" id="offcanvas-menu" style="box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;z-index: 8888;">
         <div class="offcanvas-header d-flex justify-content-center align-items-center" style="padding: 20px;">
-            <h1 style="width: 100%;font-size: 32px;margin: 0;font-family: 'Honk', system-ui;">2UML</h1><a class="zoom" href="#" style="padding: 10px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;color: var(--bs-body-color);" aria-label="Close" data-bs-dismiss="offcanvas">
+            <h1 style="width: 100%;font-size: 32px;margin: 0;font-family: 'Honk', system-ui;">2UML</h1>
+            <a class="zoom" href="#" style="padding: 10px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;color: var(--bs-body-color);" aria-label="Close" data-bs-dismiss="offcanvas">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M4.29289 4.29289C4.68342 3.90237 5.31658 3.90237 5.70711 4.29289L10 8.58579L14.2929 4.29289C14.6834 3.90237 15.3166 3.90237 15.7071 4.29289C16.0976 4.68342 16.0976 5.31658 15.7071 5.70711L11.4142 10L15.7071 14.2929C16.0976 14.6834 16.0976 15.3166 15.7071 15.7071C15.3166 16.0976 14.6834 16.0976 14.2929 15.7071L10 11.4142L5.70711 15.7071C5.31658 16.0976 4.68342 16.0976 4.29289 15.7071C3.90237 15.3166 3.90237 14.6834 4.29289 14.2929L8.58579 10L4.29289 5.70711C3.90237 5.31658 3.90237 4.68342 4.29289 4.29289Z" fill="currentColor"></path>
-                </svg></a>
+                </svg>
+            </a>
         </div>
         <div class="offcanvas-body d-flex flex-column justify-content-between pt-0" style="padding-right: 20px;padding-bottom: 20px;">
             <div>
                 <div style="width: 100%;background: var(--bs-body-color);height: 2px;margin-bottom: 20px;"></div>
                 <ul class="nav nav-pills flex-column mb-auto">
-                    <li class="nav-item"><a class="nav-link active link-light custom" href="https://github.com/robertovicario/2UML" aria-current="page" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;border-radius: 0px;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github me-2 zoom" style="font-size: 32px;margin-right: 20px!important;">
+                    <li class="nav-item">
+                        <a class="nav-link active link-light custom" href="https://github.com/robertovicario/2UML" aria-current="page" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;border-radius: 0px;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github me-2 zoom" style="font-size: 32px;margin-right: 20px!important;">
                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8"></path>
-                            </svg> Open Repository</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="#" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;" onclick="location.reload()"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-clockwise me-2 zoom" style="font-size: 32px;margin-right: 20px!important;">
+                            </svg> Open Repository
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-body-emphasis" href="#" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;" onclick="location.reload()">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-clockwise me-2 zoom" style="font-size: 32px;margin-right: 20px!important;">
                                 <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"></path>
                                 <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"></path>
-                            </svg> Reload</a><a class="nav-link link-body-emphasis" id="btn-theme" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-mask me-2 zoom" style="font-size: 32px;margin-right: 20px!important;">
+                            </svg> Reload
+                        </a>
+                        <a class="nav-link link-body-emphasis" id="btn-theme" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;" href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-mask me-2 zoom" style="font-size: 32px;margin-right: 20px!important;">
                                 <path d="M6.225 1.227A7.5 7.5 0 0 1 10.5 8a7.5 7.5 0 0 1-4.275 6.773 7 7 0 1 0 0-13.546zM4.187.966a8 8 0 1 1 7.627 14.069A8 8 0 0 1 4.186.964z"></path>
-                            </svg>&nbsp;Switch Theme</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="#" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;" data-bs-target="#modal-1" data-bs-toggle="modal"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-qr-code me-2 zoom" style="font-size: 32px;margin-right: 20px!important;">
+                            </svg>&nbsp;Switch Theme
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-body-emphasis" href="#" style="padding: 20px;font-size: 20px;font-family: Inter, sans-serif;" data-bs-target="#modal-1" data-bs-toggle="modal">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-qr-code me-2 zoom" style="font-size: 32px;margin-right: 20px!important;">
                                 <path d="M2 2h2v2H2z"></path>
                                 <path d="M6 0v6H0V0zM5 1H1v4h4zM4 12H2v2h2z"></path>
                                 <path d="M6 10v6H0v-6zm-5 1v4h4v-4zm11-9h2v2h-2z"></path>
                                 <path d="M10 0v6h6V0zm5 1v4h-4V1zM8 1V0h1v2H8v2H7V1zm0 5V4h1v2zM6 8V7h1V6h1v2h1V7h5v1h-4v1H7V8zm0 0v1H2V8H1v1H0V7h3v1zm10 1h-1V7h1zm-1 0h-1v2h2v-1h-1zm-4 0h2v1h-1v1h-1zm2 3v-1h-1v1h-1v1H9v1h3v-2zm0 0h3v1h-2v1h-1zm-4-1v1h1v-2H7v1z"></path>
                                 <path d="M7 12h1v3h4v1H7zm9 2v2h-3v-1h2v-1z"></path>
-                            </svg> Scan QR</a></li>
+                            </svg> Scan QR
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -109,24 +130,29 @@
 @enduml</textarea></div>
                 <div class="col d-flex flex-row justify-content-center align-items-end" style="padding: 20px;margin: 0 12px;margin-bottom: 24px;border-radius: 20px;background: var(--bs-dark);box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;">
                     <div class="d-flex justify-content-center align-items-center" style="padding: 10px;width: 100%;height: 300px;background: white;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;border-radius: 20px;"><img id="img-uml" class="none" style="width: 100%;object-fit: contain;object-position: center;height: 100%;" src="assets/img/example.png">
-                        <div class="d-flex justify-content-center align-items-center" style="position: absolute;z-index: 7777;width: 25%;height: 25%;"><div id="loader-img-uml">
-    <svg class="circle-outer" viewBox="0 0 86 86">
-        <circle class="back" cx="43" cy="43" r="40"></circle>
-        <circle class="front" cx="43" cy="43" r="40"></circle>
-        <circle class="new" cx="43" cy="43" r="40"></circle>
-    </svg>
-    <svg class="circle-middle" viewBox="0 0 60 60">
-        <circle class="back" cx="30" cy="30" r="27"></circle>
-        <circle class="front" cx="30" cy="30" r="27"></circle>
-    </svg>
-    <svg class="circle-inner" viewBox="0 0 34 34">
-        <circle class="back" cx="17" cy="17" r="14"></circle>
-        <circle class="front" cx="17" cy="17" r="14"></circle>
-    </svg>
-</div></div>
-                    </div><button class="btn btn-primary d-flex justify-content-center align-items-center custom zoom" id="btn-download" type="button" style="margin-left: 20px;border-width: 0px;border-radius: 100%;padding: 10px;color: white;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;">
+                        <div class="d-flex justify-content-center align-items-center" style="position: absolute;z-index: 7777;width: 25%;height: 25%;">
+                            <div id="loader-img-uml">
+                                <svg class="circle-outer" viewBox="0 0 86 86">
+                                    <circle class="back" cx="43" cy="43" r="40"></circle>
+                                    <circle class="front" cx="43" cy="43" r="40"></circle>
+                                    <circle class="new" cx="43" cy="43" r="40"></circle>
+                                </svg>
+                                <svg class="circle-middle" viewBox="0 0 60 60">
+                                    <circle class="back" cx="30" cy="30" r="27"></circle>
+                                    <circle class="front" cx="30" cy="30" r="27"></circle>
+                                </svg>
+                                <svg class="circle-inner" viewBox="0 0 34 34">
+                                    <circle class="back" cx="17" cy="17" r="14"></circle>
+                                    <circle class="front" cx="17" cy="17" r="14"></circle>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary d-flex justify-content-center align-items-center custom zoom" id="btn-download" type="button" style="margin-left: 20px;border-width: 0px;border-radius: 100%;padding: 10px;color: white;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M2 9.5C2 11.433 3.567 13 5.5 13H9V15.5858L7.70711 14.2929C7.31658 13.9024 6.68342 13.9024 6.29289 14.2929C5.90237 14.6834 5.90237 15.3166 6.29289 15.7071L9.29289 18.7071C9.68342 19.0976 10.3166 19.0976 10.7071 18.7071L13.7071 15.7071C14.0976 15.3166 14.0976 14.6834 13.7071 14.2929C13.3166 13.9024 12.6834 13.9024 12.2929 14.2929L11 15.5858V13H13.5C15.9853 13 18 10.9853 18 8.5C18 6.01472 15.9853 4 13.5 4C13.2912 4 13.0857 4.01422 12.8845 4.04175C12.4551 2.29538 10.8788 1 9 1C6.79086 1 5 2.79086 5 5C5 5.35223 5.04553 5.69382 5.13102 6.01922C3.37146 6.20358 2 7.69163 2 9.5ZM11 13H9V8C9 7.44772 9.44772 7 10 7C10.5523 7 11 7.44772 11 8V13Z" fill="currentColor"></path>
-                        </svg></button>
+                        </svg>
+                    </button>
                 </div>
             </div>
             <div class="row">
@@ -135,7 +161,9 @@
                         <div class="card-body p-sm-5" style="padding: 20px!important;border-radius: 20px;/*border: 2px solid var(--bs-body-color);*/background: var(--bs-dark);box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;">
                             <form method="post">
                                 <div class="d-flex justify-content-center align-items-end mb-3" style="margin: 0!important;padding: 0;">
-                                    <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;margin-right: 20px;"><textarea class="form-control" id="desc" name="description" style="margin-bottom: 20px;padding: 10px 20px;resize: none;font-family: Inter, sans-serif;background: var(--bs-dark);border: none;border-radius: 0;" placeholder="Design a program ..." required=""></textarea><select class="form-select" id="select-uml" style="padding: 10px 20px;font-family: Inter, sans-serif;border-radius: 20px;border: none;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;" required="">
+                                    <div class="d-flex flex-column justify-content-center align-items-center" style="width: 100%;margin-right: 20px;">
+                                        <textarea class="form-control" id="desc" name="description" style="margin-bottom: 20px;padding: 10px 20px;resize: none;font-family: Inter, sans-serif;background: var(--bs-dark);border: none;border-radius: 0;" placeholder="Design a program ..." required=""></textarea>
+                                        <select class="form-select" id="select-uml" style="padding: 10px 20px;font-family: Inter, sans-serif;border-radius: 20px;border: none;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;" required="">
                                             <option value="">Activity</option>
                                             <option value="">Class</option>
                                             <option value="">Component</option>
@@ -145,9 +173,13 @@
                                             <option value="">State</option>
                                             <option value="">Timing</option>
                                             <option value="">Use-case</option>
-                                        </select></div><button class="btn btn-primary d-flex justify-content-center align-items-center custom zoom" id="btn-desc" type="submit" style="border-width: 0px;border-radius: 100%;padding: 10px;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;">
+                                        </select>
+                                    </div>
+                                    <button class="btn btn-primary d-flex justify-content-center align-items-center custom zoom" id="btn-desc" type="submit" style="border-width: 0px;border-radius: 100%;padding: 10px;box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 24px;">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M3.29289 9.70711C2.90237 9.31658 2.90237 8.68342 3.29289 8.29289L9.29289 2.29289C9.68342 1.90237 10.3166 1.90237 10.7071 2.29289L16.7071 8.29289C17.0976 8.68342 17.0976 9.31658 16.7071 9.70711C16.3166 10.0976 15.6834 10.0976 15.2929 9.70711L11 5.41421L11 17C11 17.5523 10.5523 18 10 18C9.44772 18 9 17.5523 9 17L9 5.41421L4.70711 9.70711C4.31658 10.0976 3.68342 10.0976 3.29289 9.70711Z" fill="currentColor"></path>
-                                        </svg></button>
+                                        </svg>
+                                    </button>
                                 </div>
                             </form>
                         </div>
@@ -155,15 +187,13 @@
                 </div>
             </div>
         </div><!-- End: 2 Rows 1+2 Columns -->
-    </section><!-- Start: Footer Dark -->
-    <footer class="text-center bg-dark" style="background: black!important;margin-top: 50px;border-top: 2px solid white ;">
-        <div class="container text-white py-4 py-lg-5" style="padding: 20px;"><a href="https://github.com/robertovicario/2UML/blob/main/LICENSE" style="color: white;font-family: Inter, sans-serif;text-decoration: none;" target="_blank">The MIT License Copyright (c) 2UML 2024</a></div>
-    </footer><!-- End: Footer Dark --><script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
-<script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
-<script src="assets/src/compiler/plantuml.js"></script>
-<script src="assets/src/compiler/plantuml_core.js" type="module"></script>
-<script src="assets/src/compiler/code_mirror.js" type="module"></script>
+    </section>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/javascript/javascript.js"></script>
+    <script src="https://cjrtnc.leaningtech.com/2.3/loader.js"></script>
+    <script src="assets/src/compiler/plantuml.js"></script>
+    <script src="assets/src/compiler/plantuml_core.js" type="module"></script>
+    <script src="assets/src/compiler/code_mirror.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/desc.js"></script>
     <script src="assets/js/download-uml.js"></script>
